objects/FSL__Gantt_Filter__c.object
<CustomObject>
    <label>Gantt Filter</label>
    <nameField>
        <label>Gantt Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gantt Filters</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>FSL__Logic__c</fullName>
        <label>Logic</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Criterias__c</fullName>
        <label>Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Displayed_Fields__c</fullName>
        <label>Displayed Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Selected_Statuses__c</fullName>
        <label>Selected Statuses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Days_after_horizon__c</fullName>
        <label>Days after horizon</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Days_before_horizon__c</fullName>
        <label>Days before horizon</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__List_only_appointments_on_the_gantt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>List only appointments on the gantt</label>
        <type>Checkbox</type>
    </fields>
    <sharingReasons>
        <fullName>FSL__FSL_Public_Custom_Filter__c</fullName>
        <label>FSL Public Custom Filter</label>
    </sharingReasons>
</CustomObject>